# micro-rust

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  pre_build.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  github-actions-demo.yml
proto/: baseresponse.proto  boolean.proto  buf.yaml  computemicro.proto
src/: client.rs  main.rs  server.rs
test/: Dockerfile  post_build.sh
