[package]
name = "micro-rust"
version = "0.1.0"
authors = ["Mattias Fornander <mattias.fornander@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
prost = "0.12"
tonic = "0.10"

[build-dependencies]
prost-build = "0.12"
tonic-buf-build = "0.1"
tonic-build = "0.10"

# Server test binary
[[bin]]
name = "compute-server"
path = "src/server.rs"

# Client test binary
[[bin]]
name = "compute-client"
path = "src/client.rs"
